# ubiquitous-lamp

./: Cargo.toml
ambient_consumer/: Cargo.toml
ambient_consumer/src/: lib.rs
ambient_provider/: Cargo.toml
ambient_provider/src/: lib.rs
non_ambient_consumer/: Cargo.toml
non_ambient_consumer/src/: lib.rs
