[package]
name = "ambient_consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_provider = { version = "0.1.0", path = "../ambient_provider", default-features = false, features=["ambient-authority"]}
